<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">康宁体温监控</string>
    <string name="title_activity_settings">Settings</string>

    <!--选择设备-->
    <string name="device_title">绑定设备</string>
    <string name="device_search">搜索设备</string>

    <!--报警温度-->
    <string name="threshold_title">报警温度</string>
    <string name="alarm_title">测量闹钟</string>

    <!--测量闹钟-->
    <string name="notice_title">通知类型</string>


    <!--设置-->
    <string name="instructions">使用说明</string>
    <string name="about_us">关于我们</string>

    <!--报警温度-->
    <string name="super_fever">超高热（≥41.1°C）</string>
    <string name="high_fever">高热（≥39.1°C~41.0°C）</string>
    <string name="mid_fever">中热（≥38.1°C~39.0°C）</string>
    <string name="low_fever">低热（≥37.1°C~38.0°C）</string>

    <!--通知类型-->
    <string name="notice_vibration">振动提示</string>
    <string name="notice_sound">声音提示</string>

    <!--添加闹钟-->
    <string name="add_alarm_title">添加闹钟</string>
    <string name="repeat">重复</string>
    <string name="monday">每周一</string>
    <string name="tuesday">每周二</string>
    <string name="wednesday">每周三</string>
    <string name="thursday">每周四</string>
    <string name="friday">每周五</string>
    <string name="saturday">每周六</string>
    <string name="sunday">每周日</string>
    <string name="Delete">删除</string>

    <!--主页-->
    <string name="monitor">体温监控</string>
    <string name="searching">正在搜索设备</string>
    <string name="duration">时长：</string>
    <string name="device">设备：</string>
    <string name="stop_monitor">结束测量</string>

    <!--详细体温-->
    <string name="higher_fever">最高体温</string>
    <string name="start_time">开始时间</string>
    <string name="duration_time">持续时间</string>
    <string name="end_time">结束时间</string>

    <!--使用说明-->
    <string name="step_1">取出一片胶贴，撕掉地面保护膜。</string>
    <string name="step_2">贴在体温计主机有充电接触点的一面，确保露出温度传感器的金属探头。</string>
    <string name="step_3">撕下顶面保护膜。</string>
    <string name="step_4">将体温计贴在腋下位置，保证金属探头与人体接触紧密。</string>
    <string name="step_5">打开App连接设备开始测量体温。</string>

    <!--关于-->
    <string name="version">版本：0.5</string>
    <string name="company_intro">西安巴斯光年软件科技有限公司（BUZZLY）以“服务医疗，关注健康，呵护生命”为使命，以用户为中心，致力于成为守护人类健康的核心力量，帮助世界各地的人们改善医疗条件，降低医疗成本。</string>
    <string name="phone">电话：029-89521367</string>
    <string name="email">邮箱：wyd@buzzly.cn</string>

    <!--提醒弹出框-->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>


    <!--闹铃-->
    <string name="hello">Hello World, DeskClockMainActivity!</string>
    <string name="label">"标签"</string>
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加玲闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm">"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置闹钟"</string>

    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除闹钟"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>

    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>
    <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的闹钟铃声播放服务。"</string>


</resources>
