<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_layout_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_device"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/set_sblb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_marginTop"
                    android:text="@string/device_title"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/setting_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_instructions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/set_sysm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_marginTop"
                    android:text="@string/instructions"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/setting_text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_layout_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_threshold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/set_bjwd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_marginTop"
                    android:text="@string/threshold_title"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/setting_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_alarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/set_clnz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_marginTop"
                    android:text="@string/alarm_title"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/setting_text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_layout_height"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_notice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/set_tzlx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_marginTop"
                    android:text="@string/notice_title"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/setting_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about_us"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/set_gywm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_marginTop"
                    android:text="@string/about_us"
                    android:textColor="@color/setting_text"
                    android:textSize="@dimen/setting_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/close_bg" />

    <LinearLayout
        android:id="@+id/ll_close"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_width"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close" />
    </LinearLayout>

</RelativeLayout>
